--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@rbxts/services": "^1.1.4"
+    "@rbxts/services": "^1.1.4",
+    "rbxts-transform-env": "^0.4.0",
+    "rbxts-transformer-services": "^1.0.0"
   }
 }
