--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@rbxts/abbreviate": "^3.0.3",
+    "@rbxts/camera-shaker": "^1.0.5",
+    "@rbxts/character-viewport": "^1.0.1",
+    "@rbxts/datastore2": "^1.3.3",
+    "@rbxts/device": "^0.1.2",
+    "@rbxts/eventemitter": "^1.0.0",
+    "@rbxts/fast-wait": "^1.0.4",
     "@rbxts/services": "^1.1.4",
     "rbxts-transform-env": "^0.4.0",
     "rbxts-transformer-services": "^1.0.0"
