--- a/package.json
+++ b/package.json
@@ -23,11 +23,19 @@
     "@rbxts/character-viewport": "^1.0.1",
     "@rbxts/datastore2": "^1.3.3",
     "@rbxts/device": "^0.1.2",
-    "@rbxts/eventemitter": "^1.0.0",
     "@rbxts/fast-wait": "^1.0.4",
+    "@rbxts/maid": "^1.0.0-ts.1",
+    "@rbxts/make": "^1.0.4",
+    "@rbxts/net": "^2.0.0",
+    "@rbxts/object-event": "^1.0.1",
+    "@rbxts/objecthighlighter": "^2.0.2",
+    "@rbxts/premium-wrapper": "^1.0.0",
+    "@rbxts/promisify": "^0.2.2",
+    "@rbxts/rain": "^1.0.1",
     "@rbxts/services": "^1.1.4",
     "rbxts-transform-debug": "^0.4.0",
     "rbxts-transform-env": "^0.4.0",
-    "rbxts-transformer-services": "^1.0.0"
+    "rbxts-transformer-services": "^1.0.0",
+    "rbxts-transformer-t": "^1.1.4"
   }
 }
